--- a/cnt_gen.yml
+++ b/cnt_gen.yml
@@ -4,6 +4,8 @@ channels:
   - conda-forge
   - defaults
 dependencies:
+  - uni2ts 
+  - gluonts
   - anyio=4.2.0=py312hca03da5_0
   - appnope=0.1.4=pyhd8ed1ab_0
   - argon2-cffi=21.3.0=pyhd3eb1b0_0
