adding other files

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,13 @@ docs/figures/*
 local/
 
 config/config.local.yaml
+cnt-codehub/
+uni2ts/
+
+*.mat
+*.edf
+*.csv
+*.txt
+*.h5
+
+results/anphy_features.csv
