--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ uni2ts/
 
 results/anphy_features.csv
 notebooks/anphy_code/config
+processed_sleepedf/
+results/sleep_transformer_model.pth
 
 *.mat
 *.edf
